# vgi-easter-python

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  easter_worker.py  fly.toml  pyproject.toml  serve.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
ci/: README.md
test/sql/: easter_catalog.test
tests/: test_easter.py
