[project]
name = "vgi-easter"
version = "0.1.1"
description = "A minimal VGI (Vector Gateway Interface) worker exposing a SQL easter_date(year) scalar function to DuckDB"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rusty Conover", email = "rusty@query.farm" }]
maintainers = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
keywords = ["vgi", "duckdb", "arrow", "easter", "computus", "scalar-function"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.0",
]

# Console scripts. `vgi-easter` runs the stdio transport (DuckDB spawns it);
# `vgi-easter-http` runs the HTTP server. Once installed you can launch either
# directly, e.g. `uvx vgi-easter` or `pipx run --spec vgi-easter vgi-easter`.
[project.scripts]
vgi-easter = "easter_worker:main"
vgi-easter-http = "serve:main"

[project.urls]
Homepage = "https://query.farm"
Repository = "https://github.com/Query-farm/vgi-easter-python"
Issues = "https://github.com/Query-farm/vgi-easter-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The worker is two flat top-level modules rather than a package directory, so
# point hatchling at them explicitly (its name-based heuristic would otherwise
# look for a nonexistent `vgi_easter/`).
[tool.hatch.build.targets.wheel]
include = ["easter_worker.py", "serve.py"]

[tool.hatch.build.targets.sdist]
include = [
    "easter_worker.py",
    "serve.py",
    "conftest.py",
    "tests/",
    "test/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest",
    "pyarrow",
]
